[package]
name = "centrifuge-primitives"
description = 'Primitives used by the Centrifuge chain'
authors = ['The Centrifugians Tribe']
edition = '2018'
homepage = 'https://centrifuge.io'
license = "LGPL-3.0"
repository = 'https://github.com/centrifuge/centrifuge-chain'
version = '2.0.0'

[dependencies]
# Substrate basic dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate FRAME framework
frame-support = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }

# Substrate primitives
sp-core = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }
sp-io = { git = "https://github.com/centrifuge/substrate",  default-features = false , branch = "master" }
sp-runtime = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }
sp-std = { branch = "master", git = "https://github.com/centrifuge/substrate", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
    "sp-std/std",
]