[package]
name = "centrifuge-chain-runtime"
version = "2.0.0"
authors = ["philip@centrifuge.io"]
edition = "2018"
build = "build.rs"
license = "LGPL-3.0"
homepage = "https://centrifuge.io/"
repository = "https://github.com/centrifuge/centrifuge-chain"

[dependencies]
# external pallet
#substrate-pallet-multi-account = { branch = "rococo-v1", git = "https://github.com/centrifuge/substrate-pallet-multi-account", rev = "ef988aba4f73b57328110592b75d90fd0510d718", default-features = false }
# chainbridge = { version = "0.0.1", git = "https://github.com/centrifuge/chainbridge-substrate.git", rev = "6ef2738d8179299bf94159ae9e79d3f27be5271c" , default-features = false}
chainbridge = { git = "https://github.com/jaybutera/chainbridge-substrate", default-features = false}
#unique_assets = { version = "0.1.0", git = "https://github.com/centrifuge/unique-assets", rev = "d4ff80eb8ef6a192012fd0e2f0d99f7dc65ac9f0", default-features = false }
unique_assets = { version = "0.1.0", git = "https://github.com/jaybutera/unique-assets", default-features = false }
bridge-mapping = { path = "../pallets/bridge-mapping", default-features = false }

# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
safe-mix = { version = "1.0", default-features = false }
smallvec = "1.4.0"
static_assertions = "1.1.0"
hex-literal = "0.2.1"
rustc-hex = { version = "2.0", optional = true }
serde = { version = "1.0.102", optional = true }

# parachain
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "rococo-v1" }
cumulus-primitives = {git = 'https://github.com/paritytech/cumulus', default-features = false, branch = "rococo-v1"}
cumulus-runtime = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "rococo-v1" }
parachain-info = { git = "https://github.com/paritytech/cumulus.git", default-features = false, branch = "rococo-v1" }

# primitives
sp-authority-discovery = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-consensus-babe = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-block-builder = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false}
sp-inherents = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
node-primitives = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-offchain = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-core = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-io = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-std = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-api = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-runtime = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-staking = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-session = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-transaction-pool = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-version = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
sp-arithmetic = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }

# frame dependencies
frame-executive = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
frame-support = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
frame-system = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
frame-system-rpc-runtime-api = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-authority-discovery = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-authorship = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-babe = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-balances = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-collective = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-democracy = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-elections-phragmen = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
#pallet-finality-tracker = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-grandpa = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-im-online = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-indices = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-membership = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-multisig = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-offences = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-proxy = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-randomness-collective-flip = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-session = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false, features = ["historical"] }
pallet-staking = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-staking-reward-curve = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git"}
pallet-timestamp = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-utility = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-transaction-payment = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-transaction-payment-rpc-runtime-api = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-identity = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-scheduler = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
pallet-vesting = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false }
frame-benchmarking = { branch = "rococo-v1", git = "https://github.com/paritytech/substrate.git",  default-features = false, optional = true }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/centrifuge/substrate.git", rev = "e271ae7fda72a7ad55ff3c216b8b2abae0ae31fd" }

[features]
default = ["std"]
std = [
    "bridge-mapping/std",
    "unique_assets/std",
    "frame-benchmarking/std",
    "sp-authority-discovery/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "sp-consensus-babe/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "codec/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "frame-executive/std",
    #"pallet-finality-tracker/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "sp-inherents/std",
    "pallet-membership/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
    "node-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-proxy/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
    "serde",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-staking/std",
    "sp-session/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-vesting/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
    "sp-arithmetic/std",
    "chainbridge/std",
    #"substrate-pallet-multi-account/std",
    "sp-io/std",
    "rustc-hex",
    "safe-mix/std",
    "cumulus-runtime/std",
]
runtime-benchmarks = ["frame-benchmarking"]
