[package]
name = "common-traits"
authors = ['The Centrifugians Tribe']
edition = '2018'
homepage = 'https://centrifuge.io'
license = "LGPL-3.0"
repository = 'https://github.com/centrifuge/centrifuge-chain'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.102" }
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'] , default-features = false }
frame-support = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
sp-runtime = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }
sp-std = { git = "https://github.com/centrifuge/substrate", default-features = false , branch = "master" }

[features]
default = ['std']
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std"
]
